fixed spacing for particle animation

--- a/_sass/_header-icons.scss
+++ b/_sass/_header-icons.scss
@@ -2,7 +2,6 @@
   display: inline-block;
   justify-content: center;
   text-align: center;
-  margin-top: 2vh;
 }
 
 .header-icons a:hover {
